# atlas-clean-code-februar-2022

./: .gitignore  README.md
SimpleNimmspiel/: CMakeLists.txt  main.cpp
SimpleNimmspiel/clients/: game_client.cpp  game_client.h
SimpleNimmspiel/games/: abstract_game.h  game.h
SimpleNimmspiel/games/players/: abstract_game_player.h  game_player.h
SimpleNimmspiel/games/takegame/: take_game_impl.h
SimpleNimmspiel/games/takegame/players/: abstract_take_game_player.h  computer_player.h  human_player.h  oma_player.h  take_game_player.h
fill-array-exercise/: CMakeLists.txt
fill-array-exercise/example/: random_vector.cpp
fill-array-exercise/include/example/container/: parallel_vector_creator.hpp  vector_creator_interface.hpp
fill-array-exercise/include/example/random/: mersenne_twister_number_generator.hpp
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
